==> KKKKpossible/sh1106_oled_adafruit/Core/Src/Adafruit_SSD1306.cpp <==
#include <stdlib.h>
#include "string.h"
#include "glcdfont.h"
#include "Adafruit_GFX.h"
#include "Adafruit_SSD1306.h"
#define SSD1306_CMD   0x00
#define SSD1306_DATA  0x40
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void Adafruit_SSD1306::ssd1306_command(uint8_t c) {
  
  Buffer_CMD[1] = c;
  
  while(HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,Buffer_CMD,0x02,0x10) != HAL_OK)
  {

  }
}

void Adafruit_SSD1306::ssd1306_data(uint16_t a)  {

  uint8_t i;

  
  for(i = 0; i < 128 ; i++) {
    Buffer_DATA[i+1] = buffer[a+i];
  }
  
  while(HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,Buffer_DATA,129,0x10) != HAL_OK)
  {

  }

}
